--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.13.3",
     "express-handlebars": "^2.0.1",
     "fusioncharts": "^3.11.2",
+    "json2csv": "^3.7.1",
     "mongoose": "~3.8.8"
   }
 }
